--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "tailwindcss": "^1.7.6"
+    "tailwindcss": "^1.7.6",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
